apps/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: stirling-pdf
          image: stirlingtools/stirling-pdf:2.14.3-fat
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
