apps/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling-pdf.stadthagen.dev`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 80
  tls:
    secretName: stirling-pdf-tls
